--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="30dp"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/coordinatorLayoutFAB"
@@ -36,7 +35,8 @@
                 android:backgroundTint="@color/black"
                 app:fabAlignmentMode="end"
                 android:layout_gravity="bottom"
-                app:navigationIcon="@drawable/menu"/>
+                app:navigationIcon="@drawable/menu"
+                app:menu="@menu/bottom_menu"/>
 
             <!-- app:borderWidth="0dp" - Закругляет края плавающей кнопки -->
             <!-- app:layout_anchor="@id/bottomBarFAB" - Крепит Плавающую кнопку к БоттомАппБару -->
